--- a/nix/app/internal/views/components/role_config_new.templ
+++ b/nix/app/internal/views/components/role_config_new.templ
@@ -127,18 +127,21 @@ templ RoleTypeSection(room *game.Room, typeName string, typeConfig *game.RoleTyp
 					<span class="role-type-name">{ typeName }s</span>
 				</div>
 				// Non-clickable section
-				<div class="role-type-controls">
-					<label>Count:</label>
-					<button 
-						class="btn btn-xs"
-						data-on-click={ fmt.Sprintf(`@post('/room/%s/config/role-type/%s/decrement')`, room.Code, typeName) }
-						disabled?={ typeConfig.Count == 0 }
-					>-</button>
-					<span class="role-count mx-2">{ fmt.Sprintf("%d", typeConfig.Count) }</span>
-					<button 
-						class="btn btn-xs"
-						data-on-click={ fmt.Sprintf(`@post('/room/%s/config/role-type/%s/increment')`, room.Code, typeName) }
-					>+</button>
+				<div class="role-type-controls flex items-center gap-4">
+					<div class="tooltip tooltip-top" data-tip={ fmt.Sprintf("Number of %s roles", typeName) }>
+						<div class="flex flex-col items-center">
+							<button 
+								class="btn btn-xs btn-square"
+								data-on-click={ fmt.Sprintf(`@post('/room/%s/config/role-type/%s/increment')`, room.Code, typeName) }
+							>+</button>
+							<span class="role-count my-1 font-bold">{ fmt.Sprintf("%d", typeConfig.Count) }</span>
+							<button 
+								class="btn btn-xs btn-square"
+								data-on-click={ fmt.Sprintf(`@post('/room/%s/config/role-type/%s/decrement')`, room.Code, typeName) }
+								disabled?={ typeConfig.Count == 0 }
+							>-</button>
+						</div>
+					</div>
 					if typeConfig.Count > 0 {
 						@RoleTypeStatus(typeName, typeConfig)
 					}
