🐛 fix: z-fighting during role type collapse with data-show
Use Datastar's data-show to instantly hide role cards when accordion
is unchecked, preventing them from appearing at the parent position
during the collapse animation

--- a/nix/app/internal/views/components/role_config_new.templ
+++ b/nix/app/internal/views/components/role_config_new.templ
@@ -165,7 +165,7 @@ templ RoleTypeSection(room *game.Room, typeName string, typeConfig *game.RoleTyp
 						}
 					</label>
 					<div class="collapse-content">
-						<div class="space-y-2 pt-2">
+						<div class="space-y-2 pt-2" data-show={ fmt.Sprintf("$accordion%s", typeName) }>
 							for _, card := range cards {
 								<div class="form-control">
 									<label class="label cursor-pointer justify-start gap-2">
